roles/home_cluster/files/kubernetes/music-assistant/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: music-assistant
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: music-assistant
  template:
    metadata:
      labels:
        app: music-assistant
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      nodeSelector:
        kubernetes.io/hostname: rpi-cm4-3
      containers:
        - name: music-assistant
          image: ghcr.io/music-assistant/server:2.9.13
          resources:
            requests:
              memory: "1Gi"
              cpu: "1"
            limits:
              memory: "2Gi"
              cpu: "4"
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - DAC_READ_SEARCH
            seccompProfile:
              type: Unconfined
          ports:
            - containerPort: 8095
          volumeMounts:
            - name: music-assistant
              mountPath: /data
      volumes:
        - name: music-assistant
          persistentVolumeClaim:
            claimName: music-assistant
