roles/home_cluster/files/kubernetes/music-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: music-assistant
spec:
  ports:
    - name: webserver
      port: 8095
  selector:
    app: music-assistant
