roles/home_cluster/files/kubernetes/music-assistant/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: music-assistant
spec:
  rules:
    - host: music-assistant.nkzo.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: music-assistant
                port:
                  name: webserver
          - path: /flow
            pathType: Prefix
            backend:
              service:
                name: music-assistant
                port:
                  name: streamserver
